--- a/estructura de archivos/src/views/index.ejs
+++ b/estructura de archivos/src/views/index.ejs
@@ -66,7 +66,7 @@
                                     <a class="nav-link active" aria-current="page" href="#">LISTA DE DESEOS</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Espñaol Latinoamerica | ARS</a>
+                                    <a class="nav-link active" aria-current="page" href="#">Español Latinoamerica | ARS</a>
                                 </li>
                             </ul>
                         </div>
