--- a/estructura de archivos/src/views/products/productEdit.ejs
+++ b/estructura de archivos/src/views/products/productEdit.ejs
@@ -25,19 +25,17 @@
 
                             <div class="form-box">
                                 <label class="form__label">Categorías:</label>
-                                <select name="categoria" id="">
-                                    <option value="accion" hidden selected>Seleccionar
-                                        categoría...</option>
-                                    <option value="accion">Acción</option>
-                                    <option value="aventura">Aventura</option>
-                                    <option value="ftp/tps">FTP/TPS</option>
-                                    <option value="rpg">RPG</option>
-                                    <option value="simulacion">Simulación</option>
-                                    <option value="carreras">Carreras</option>
-                                    <option value="lucha">Lucha</option>
-                                    <option value="mmo">MMO</option>
-                                    <option value="arcade">Arcade</option>
-                                    <option value="otro">Otro</option>
+                                <select name="category" id="category">
+                                    <option  value="<%= productToEdit.category === 'accion' && 'selected' %>">Acción</option>
+                                    <option  value="<%= productToEdit.category === 'aventura' && 'selected' %>">Aventura</option>
+                                    <option  value="<%= productToEdit.category === 'fps/tps' && 'selected' %>">FTP/TPS</option>
+                                    <option  value="<%= productToEdit.category === 'rpg' && 'selected' %>">RPG</option>
+                                    <option  value="<%= productToEdit.category === 'simulacion' && 'selected' %>">Simulación</option>
+                                    <option  value="<%= productToEdit.category === 'carreras' && 'selected' %>">Carreras</option>
+                                    <option  value="<%= productToEdit.category === 'lucha' && 'selected' %>">Lucha</option>
+                                    <option  value="<%= productToEdit.category === 'mmo' && 'selected' %>">MMO</option>
+                                    <option  value="<%= productToEdit.category === 'arcade' && 'selected' %>">Arcade</option>
+                                    <option  value="<%= productToEdit.category === 'otro' && 'selected' %>">Otro</option>
                                 </select>
                             </div>
 
@@ -56,20 +54,20 @@
 
                             <div class="form-box">
                                 <label class="form__label" for="description">Descripción:</label>
-                                <textarea name="description" id="description" cols="30" rows="5" minlength="20" maxlength="250" value="<%= productToEdit.description %>"></textarea>
+                                <textarea name="description" id="description" cols="30" rows="5" minlength="20" maxlength="250"><%= productToEdit.description %></textarea>
                             </div>
 
                             <div class="form-box">
                                 <label class="form__label">Companía:</label>
                                 <select name="descuento" id="">
-                                    <option value="1" hidden selected>Seleccionar...</option>
-                                    <option value="2">Xbox</option>
-                                    <option value="3">Microsoft</option>
-                                    <option value="5">Steam</option>
-                                    <option value="8">PSN</option>
-                                    <option value="6">Ubisoft</option>
-                                    <option value="7">Battle.net</option>
-                                    <option value="">Otro</option>
+                                    <option value="" hidden selected>Seleccionar...</option>
+                                    <option value="xbox">Xbox</option>
+                                    <option value="microsoft">Microsoft</option>
+                                    <option value="steam">Steam</option>
+                                    <option value="psn">PSN</option>
+                                    <option value="ubisoft">Ubisoft</option>
+                                    <option value="battle.net">Battle.net</option>
+                                    <option value="otro">Otro</option>
                                 </div>
 
                             </div>
